--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -6,9 +6,14 @@ Flask==2.3.2
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+joblib==1.3.2
 MarkupSafe==2.1.3
+numpy==1.26.0
 packaging==23.1
 pluggy==1.2.0
 pytest==7.4.0
+scikit-learn==1.3.1
+scipy==1.11.2
+threadpoolctl==3.2.0
 tomli==2.0.1
 Werkzeug==2.3.6
